Fix ootb-template bug

--- a/tap/overlay/ootb-template-add-pvc-probe-ingress-overlay.yaml
+++ b/tap/overlay/ootb-template-add-pvc-probe-ingress-overlay.yaml
@@ -209,5 +209,8 @@ stringData:
           name: #@ data.values.workload.metadata.name + "-server"
           labels: #@ merge_labels({ "app.kubernetes.io/component": "config" })
         data:
-          #! delivery.yml: #@ yaml.encode(delivery())
+          #@ if param("ingress"):
           delivery.yml: #@ yaml.encode(delivery()) + "\n---\n" + yaml.encode(param("ingress"))
+          #@ else:
+          delivery.yml: #@ yaml.encode(delivery())
+          #@ end
