--- a/tap/overlay/ootb-template-add-pvc-probe-ingress-overlay.yaml
+++ b/tap/overlay/ootb-template-add-pvc-probe-ingress-overlay.yaml
@@ -107,6 +107,8 @@ stringData:
                   volumeMounts: #@ param("volumeMounts")
               #@ if/end param("volumes"):
               volumes: #@ param("volumes")
+              #@ if/end param("terminationGracePeriodSeconds"):
+              terminationGracePeriodSeconds: #@ param("volumes")
 
     #@ def server_template():
     kind: ClusterConfigTemplate
