--- a/sonar-pipeline/tekton-task.yaml
+++ b/sonar-pipeline/tekton-task.yaml
@@ -22,18 +22,19 @@ spec:
   workspaces:
     - name: custom-maven-settings
     - name: supplychain-workspace
+    - name: local-repo
 
   steps:
     - name: compile
-      image: harbor.h2o-4-23332.h2o.vmware.com/tap/tools/gradle:jdk11-jammy
+      image: harbor.h2o-4-23332.h2o.vmware.com/tap/tools/maven:3-openjdk-8
       workingDir: $(workspaces.supplychain-workspace.path)
       script: |
         #!/usr/bin/env bash
         set -ex
         wget -qO- $(params.source-url) | tar xvz
         cat $(workspaces.custom-maven-settings.path)/settings.xml
-        ./mvnw compile -s $(workspaces.custom-maven-settings.path)/settings.xml
-
+        mvn compile -Dmaven.repo.local=$(workspaces.local-repo.path)/.m2 -s $(workspaces.custom-maven-settings.path)/settings.xml
+        sleep 600
 
     - name: sonar-properties-create
       image: harbor.h2o-4-23332.h2o.vmware.com/tap/tools/gradle:jdk11-jammy
@@ -93,10 +94,7 @@ spec:
           echo "sonar.sources=." >> sonar-project.properties
           echo "sonar.exclusions=./src/main/resources/**/*" >> sonar-project.properties
           echo "sonar.java.binaries=./target/classes/" >> sonar-project.properties
-          echo "sonar.qualitygate.wait=true" >> sonar-project.properties
-          echo "sonar.qualitygate.timeout=300" >> sonar-project.properties
         fi
-
         echo "---------------------------"
         cat $(workspaces.supplychain-workspace.path)/sonar-project.properties
 
